--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -24,13 +24,13 @@ steps:
       export BUILDRUN_HASH=`echo ${OCI_BUILD_RUN_ID} | rev | cut -c 1-7`
       echo "BUILDRUN_HASH: " $BUILDRUN_HASH
   - type: Command
-    name: "Function Build Default Image"
+    name: "Function Build Core Image"
     timeoutInSeconds: 6000
     command: |
       cd ${OCI_PRIMARY_SOURCE_DIR}/core
       fn build  --verbose
   - type: Command
-    name: "Function Build Custom Image"
+    name: "Function Build Siebel Image"
     timeoutInSeconds: 6000
     command: |
       cd ${OCI_PRIMARY_SOURCE_DIR}/bscs
@@ -51,4 +51,4 @@ outputArtifacts:
     # this is only the locally exported container image name
     # this location tag doesn't effect the tag used to deliver the container image
     # to the Container Registry.
-    location: bscs:0.0.0
+    location: siebel:0.0.0
